# auto_code

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  code_editor.cpp  code_editor.h  codeeditor.cpp  codeeditor.h  erszgl.bazel  gen_icon.cpp  json_highlighter.cpp  json_highlighter.h  jsonhighlighter.cpp  jsonhighlighter.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  template_engine.cpp  template_engine.h  template_highlighter.cpp  template_highlighter.h  templateengine.cpp  templateengine.h  templatehighlighter.cpp  templatehighlighter.h  ts_highlighter.cpp  ts_highlighter.h  tshighlighter.cpp  tshighlighter.h
.trae/: build.bat  build.ps1  rename_handler.js  rename_handler.ps1  restore.ps1
.trae/rules/: project_rules.md
file/: builtin.d.ac  tree.config  user_data.json  user_model.ac
file/crud_nest/: crud_nest.rule
file/crud_nest/ac/: user_model.tpl
file/crud_nest/erp_api/: user_data.json
file/crud_nest/news_api/: 1.ac  1.json  1.tpl  2.ac  main.ac  main_test.ac  news_main.ac  sys_task.json  user_data.json  user_data22.json  user_data33.json
file/crud_nest/news_api/user/: user.json
file/crud_nest/template/: controller.tpl  controller_.tpl  entity.tpl  module.tpl  param.ac  product.tpl  query_data.ac  service.tpl  service_.tpl
file/crud_nest/template/in/: in_ins.tpl  in_sel.tpl
file/crud_nest/template/model/: db.tpl  db_.tpl
file/crud_nest/test/: block_comment_test.ac  import_test.ac  main_test.ac  test.json
file/crud_nest/test/lib/: database.ac  logger.ac  math_utils.ac
file/subdir/: nested.ac
res/: app_icon.rc
src/engine/: ac_language.h  ac_value_str.h  engine_ac.cpp  engine_ac.h  engine_tpl.cpp  engine_tpl.h  json_validator.cpp  json_validator.h  main_engine.cpp  main_engine.h  schema_validator.cpp  schema_validator.h  script_parser.cpp  script_parser.h  template_engine.cpp  template_engine.h  validation_result.h  validator_json.cpp  validator_json.h
src/engine/ac_script/: ac_ast.h  ac_engine.cpp  ac_engine.h  ac_interpreter.cpp  ac_interpreter.h  ac_lexer.cpp  ac_lexer.h  ac_parser.cpp  ac_parser.h
src/engine/function/: fun_base.h  fun_builtin.cpp  fun_builtin.h  fun_const.cpp  fun_const.h  fun_db.cpp  fun_db.h  fun_factory.cpp  fun_factory.h  fun_file.cpp  fun_file.h  fun_json.cpp  fun_json.h  fun_link.cpp  fun_link.h  fun_mgr.cpp  fun_mgr.h  fun_str.cpp  fun_str.h
src/engine/handler/: block_handler.cpp  block_handler.h  each_block_handler.cpp  each_block_handler.h  expression_handler.cpp  expression_handler.h  hand_block.cpp  hand_block.h  hand_expression.cpp  hand_expression.h  hand_if_block.h  if_block_handler.cpp  if_block_handler.h
src/engine/script/: ac_builtin_eval.cpp  ac_builtin_eval.h  ac_builtin_loader.cpp  ac_builtin_loader.h  ac_engine.cpp  ac_engine.h  ac_executor.cpp  ac_executor.h  ac_interpreter.cpp  ac_interpreter.h  ac_interpreter_expr.cpp  ac_interpreter_stmt.cpp  ac_lexer.cpp  ac_lexer.h  ac_object_manager.cpp  ac_object_manager.h  ac_parser.cpp  ac_parser.h  ac_parser_expr.cpp  ac_parser_stmt.cpp  ac_symbol_table.cpp  ac_symbol_table.h  ac_type.cpp  ac_type.h  ac_type_checker.cpp  ac_type_checker.h  ac_validator.cpp  ac_validator.h  ast_visitor.cpp  ast_visitor.h  undeclared_ident_validator.cpp  undeclared_ident_validator.h
src/engine/tpl/: tpl_ast.h  tpl_engine.cpp  tpl_engine.h  tpl_lexer.cpp  tpl_lexer.h  tpl_parser.cpp  tpl_parser.h  tpl_renderer.cpp  tpl_renderer.h  tpl_validator.cpp  tpl_validator.h
src/engine/tpl/handlers/: block_each.cpp  block_each.h  block_expression.cpp  block_expression.h  block_if.cpp  block_if.h  tpl_block.cpp  tpl_block.h  tpl_factory.cpp  tpl_factory.h
src/engine/tpl_hand/: hand_each_block.cpp  hand_each_block.h  hand_if_block.cpp  tpl_block.cpp  tpl_block.h  tpl_each_block.cpp  tpl_each_block.h  tpl_expression.cpp  tpl_expression.h  tpl_if_block.cpp  tpl_if_block.h
src/tool/common/: file_util.cpp
src/tool/ui/: aui_button.cpp  aui_button.h  aui_combo_box.cpp  aui_combo_box.h  aui_error_tool_tip.cpp  aui_error_tool_tip.h  aui_icon.cpp  aui_icon.h  aui_mgr.h  aui_style.cpp  aui_style.h  aui_window.cpp  aui_window.h  code_editor.cpp  code_editor.h  code_log.cpp  rename_dialog.cpp  rename_dialog.h  tree_dir.cpp  tree_dir.h
src/tool/ui/code/: code_editor.cpp  code_editor.h  code_log.cpp  code_log.h  format_code.cpp  guess_code.cpp  tree_dir.cpp  tree_dir.h
src/tool/ui/component/: aui_button.cpp  aui_button.h  aui_combo_box.cpp  aui_error_tool_tip.cpp  aui_icon.h  aui_message_box.cpp  aui_style.cpp  aui_style.h  aui_window.cpp  aui_window.h
src/tool/ui/format/: format_code.cpp  format_code.h
src/tool/ui/guess/: guess_code.cpp  guess_code.h
src/tool/ui/highlighter/: ac_highlighter.cpp  ac_highlighter.h  json_highlighter.cpp  json_highlighter.h  light_ac.cpp  light_ac.h  light_color.h  light_json.cpp  light_tpl.cpp  light_tpl.h  light_ts.cpp  lighter_color.h  template_highlighter.cpp  tpl_highlighter.cpp  tpl_highlighter.h  ts_highlighter.cpp
src/ui/create/: create_mgr.cpp  create_mgr.h  create_model.cpp  create_model.h  create_ui.cpp  create_ui.h
src/ui/demo/: demo_mgr.cpp  demo_mgr.h  demo_model.cpp  demo_model.h  demo_ui.cpp  demo_ui.h
src/ui/main_dev/: main_dev.cpp  main_dev.h  main_dev_mgr.cpp  main_dev_mgr.h  main_dev_mgr_navigate.cpp  main_dev_model.cpp  main_dev_model.h  main_dev_ui.cpp  main_dev_ui.h  main_dev_ui_ext.cpp  main_dev_ui_ext.h
src/ui/main_dev/help_key/: help_key_mgr.cpp  help_key_mgr.h  help_key_model.cpp  help_key_model.h  help_key_ui.cpp  help_key_ui.h
src/ui/tool_ui/: code_editor.cpp  tree_dir.cpp  tree_dir.h
src/ui/tool_ui/highlighter/: template_highlighter.h  ts_highlighter.cpp
src/util/common/: code_constants.h  file_util.h  path_resolver.cpp  path_resolver.h  tool_json.cpp  tool_json.h  util_file.cpp  util_file.h  util_json.cpp  util_json.h
src/util/design/: singleton.h
src/util/ui/: aui_mgr.h  aui_window.cpp  aui_window.h
src/util/ui/code/: bracket_matcher.cpp  bracket_matcher.h  code_editor.cpp  code_editor.h  code_editor_complete.cpp  (+15 more)
(+14 files in other folders)
